<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIControlsOverview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnSimple">Simple button</string>
    <string name="btnToggle">Toggle button</string>
    <string name="btnShowAlert">Show AlertDialog</string>
    <string name="checkbox">CheckBox</string>
    <string name="btnGoToList">Go to list activity</string>
    <string name="radiobutton1">RadioButton1</string>
    <string name="radiobutton2">RadioButton2</string>
    <string name="radiobutton3">RadioButton3</string>
    <string name="title_activity_list">ListActivity</string>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
